@@ -54,6 +54,7 @@
 - fix direct map not updating on reread.
 - add external bind method.
 - fix add simple bind auth.
+- add option to dump configured automount maps.
 
 03/09/2009 autofs-5.0.5
 -----------------------
